--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -69,6 +69,8 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \section{Results}
 \label{sec:results}
 
+The following table shows several $V_{GS}$ values that are just slightly over the overdrive voltage $V_{OV}$ and gives an idea of the amount of variation for values resulting from equation 2.
+
 \begin{figure}[hbtp]
   \centering
   \resizebox{1.0\textwidth}{!}{\input{graph.tex}}
