--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -96,7 +96,7 @@ It’s hard to compare the Figure~\ref{fig:graph} plot with the 2N7000 data shee
 
 It’s easier to compare Figure~\ref{fig:graph} plot with the PSpice simulation because the $V_{GS}$ are closer to the values seen in Figure~\ref{fig:graph}. Again the $V_{OV}$ values are similar in both the plot and the simulation. But, the PSpice simulation curves are “flat” at points beyond the $V_{OV}$ instead of sloped like it is in Figure~\ref{fig:graph}.
 
-The second PSpice simulation was more representative of the Figure~\ref{fig:graph} plots because the value of $\lambda$ was changed from 0 (in the first simulation) to .06, which made the $V_{GS}$ curves slope beyond the $V_{OV}$. Adding the $\lambda$ also “raised” the $I_D$ current for the individual $V_{OV}$ points. This is because the $\lambda$ value represents the slight resistance that is inherent to the transistor – a low $\lambda$ value is a higher resistance and a high $\lambda$ is a lower resistance because the resistance is the inverse of the $\lambda$.
+The second PSpice simulation was more representative of the Figure~\ref{fig:graph} plots because the value of $\lambda$ was changed from 0 to 0.06, which made the $V_{GS}$ curves slope beyond the $V_{OV}$. Adding the $\lambda$ also “raised” the $I_D$ current for the individual $V_{OV}$ points. This is because the $\lambda$ value represents the slight resistance that is inherent to the transistor – a low $\lambda$ value is a higher resistance and a high $\lambda$ is a lower resistance because the resistance is the inverse of the $\lambda$.
 
 \section{Equations}
 \label{sec:equations}
