There are no words.

--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -4,7 +4,7 @@
 \section{Objective}
 \label{sec:objective}
 
-The objective is to construct and observe the operation of a CMOS inverter and NAND gate.
+The objective is to observe the voltage-current characteristics of an N-type MOSFET.
 
 \section{Equipment}
 \label{sec:equipment}
@@ -73,7 +73,7 @@ The following table shows several $V_{GS}$ values that are just slightly over th
 \begin{figure}[hbtp]
   \centering
   \resizebox{1.0\textwidth}{!}{\input{graph.tex}}
-  \caption{\label{fig:graph} Graph}
+  \caption{\label{fig:graph} Voltage-Current Relationship}
 \end{figure}
 
 \begin{table}[hbtp]
@@ -88,14 +88,20 @@ The following table shows several $V_{GS}$ values that are just slightly over th
   \caption{\label{tab:kn} $k_n'$}
 \end{table}
 
+\begin{figure}[hbtp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{lambda6}
+  \caption{\label{fig:lambda6} PSpice Simulation. $\lambda$ = 0.06}
+\end{figure}
+
 \section{Conclusion}
 \label{sec:conclusion}
 
-It’s hard to compare the Figure~\ref{fig:graph} plot with the 2N7000 data sheet because the data sheet’s lowest $V_{GS}$ curve is 3 V, which is still higher than the highest $V_{GS}$ curve in Figure~\ref{fig:graph}. However, it is still apparent that the $V_{GS}$ curve of \SI{2.91}{V} in Figure~\ref{fig:graph} is similar to the \SI{3}{V} curve because the $V_{OV}$ points are roughly the same with a $V_{DS}$ value of 1 – 1.5 V. After the $V_{OV}$ point, both curves taper off and have a very slight positive slope.
+It’s hard to compare the Figure~\ref{fig:graph} plot with the 2N7000 data sheet because the data sheet’s lowest $V_{GS}$ curve is \SI{3}{V}, which is still higher than the highest $V_{GS}$ curve in Figure~\ref{fig:graph}. However, it is still apparent that the $V_{GS}$ curve of \SI{2.91}{V} in Figure~\ref{fig:graph} is similar to the \SI{3}{V} curve because the $V_{OV}$ points are roughly the same with a $V_{DS}$ value of 1 –- \SI{1.5}{V}. After the $V_{OV}$ point, both curves taper off and have a very slight positive slope.
 
 It’s easier to compare Figure~\ref{fig:graph} plot with the PSpice simulation because the $V_{GS}$ are closer to the values seen in Figure~\ref{fig:graph}. Again the $V_{OV}$ values are similar in both the plot and the simulation. But, the PSpice simulation curves are “flat” at points beyond the $V_{OV}$ instead of sloped like it is in Figure~\ref{fig:graph}.
 
-The second PSpice simulation was more representative of the Figure~\ref{fig:graph} plots because the value of $\lambda$ was changed from 0 to 0.06, which made the $V_{GS}$ curves slope beyond the $V_{OV}$. Adding the $\lambda$ also “raised” the $I_D$ current for the individual $V_{OV}$ points. This is because the $\lambda$ value represents the slight resistance that is inherent to the transistor – a low $\lambda$ value is a higher resistance and a high $\lambda$ is a lower resistance because the resistance is the inverse of the $\lambda$.
+The second PSpice simulation (Figure~\ref{fig:lambda6}) is more representative of the Figure~\ref{fig:graph} plots because the value of $\lambda$ was changed from 0 to 0.06, which made the $V_{GS}$ curves slope beyond the $V_{OV}$. Adding the $\lambda$ also “raised” the $I_D$ current for the individual $V_{OV}$ points. This is because the $\lambda$ value represents the slight resistance that is inherent to the transistor – a low $\lambda$ value is a higher resistance and a high $\lambda$ is a lower resistance because the resistance is the inverse of the $\lambda$.
 
 \section{Equations}
 \label{sec:equations}
