--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -48,13 +48,13 @@ The objective is to observe the voltage-current characteristics of an N-type MOS
 \item Construct the circuit shown in Figure~\ref{fig:circuit}. Use the HP multimeter to measure the drain current, $I_D$ , and the Fluke multimeters to measure $V_{DS}$ and $V_{GS}$. Use the +\SI{6}{V} power supply for $V_{GG}$ and the +\SI{25}{V} supply for $V_{DD}$.
 \item Set $V_{GG}$ to 0 V and $V_{DD}$ to \SI{5}{V} and measure $V_{DS}$ and $I_D$.
 \item Slowly increase $V_{GG}$ until the transistor just begins to conduct current as evidenced by a small drop in $V_{DS}$. Record the value of $V_{GS}$ as the Gate Threshold Voltage, $V_{TN}$.
-\item Adjust $V_{GG}$ to increase $V_{GS}$ by \SI{0.2}{V} above the threshold. Readjust $V_{DD}$ to return $V_{DS}$ to \SI{5}{V}, and then measure the drain current ($I_D$ ). Record the value of $V_{GS}$ in the first column of table1, and record the value of $I_D$ in the second column (the $V_{DS}$ = \SI{5}{V} column).
-\item Continue increasing $V_{GS}$ in \SI{0.2}{V} steps while maintaining $V_{DS}$ at \SI{5}{V}, measuring the drain current at each step. Record the values of $V_{GS}$ and $I_D$ in table 1. Stop this process when the drain current reaches approximately 80mA.
-\item Complete the entries in table 1 by adjusting $V_{DD}$ and $V_{GG}$ to obtain the various required $V_{DS}$ and $V_{GS}$ values, then measuring $I_D$ at each value. Do not exceed 80mA drain current.
+\item Adjust $V_{GG}$ to increase $V_{GS}$ by \SI{0.2}{V} above the threshold. Readjust $V_{DD}$ to return $V_{DS}$ to \SI{5}{V}, and then measure the drain current ($I_D$ ). Record the values of $V_{GS}$  and  $I_D$.
+\item Continue increasing $V_{GS}$ in \SI{0.2}{V} steps while maintaining $V_{DS}$ at \SI{5}{V}, measuring the drain current at each step. Record the values of $V_{GS}$ and $I_D$. Stop this process when the drain current reaches approximately 80mA.
+\item Repeat this process for $V_{DS}$ = 4, 3, 2.5, 2, 1.5, 1, and \SI{0.5}{V}.
 \end{enumerate}
 
 \subsection{Small-Signal Transconductance}
-\label{sec:nand}
+\label{sec:smallsig}
 
 \begin{enumerate}
 \item Adjust $V_{GG}$ and $V_{DD}$ to obtain $V_{DS}$ = \SI{5}{V} and $I_D$ = \SI{10}{mA}.
