--- a/school/elec_313/lab7/tex/report.tex
+++ b/school/elec_313/lab7/tex/report.tex
@@ -48,7 +48,7 @@ The following procedures were identified to observe the basic operation of MOSFE
 
 \begin{enumerate}
 \item Build the circuit shown in Figure~\ref{schem:common-source}.  Use the closest resistor values available for R1 and Rs.
-\item Measure and record the dc voltages at all terminals of the MOSFET.  Compute the drain current.
+\item Measure and record the drain current and dc voltages at all terminals of the MOSFET.
 \item Set the function generator for a \SI{200}{V_{pp}}, \SI{20}{kHz} sine wave with 0V DC offset.  Connect it to $V_{in}$ .
 \item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground. This will be considered a no-load scenario.
 \item Connect channel 1 of the oscilloscope to $V_{in}$ and channel 2 to $V_{out}$ . Set the scope to trigger off of channel 1 . This setting is accessed using the EDGE button on the oscilloscope.
@@ -64,7 +64,7 @@ The following procedures were identified to observe the basic operation of MOSFE
 
 \begin{enumerate}
 \item Construct the circuit shown in Figure~\ref{schem:source-follower} by removing the \SI{1}{\kilo\ohm} drain resistor and moving the output capacitor to the source of the MOSFET.
-\item Measure and record the dc voltages at all terminals of the MOSFET. Compute the drain current.
+\item Measure and record the drain current and dc voltages at all terminals of the MOSFET.
 \item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground. This will be considered a no-load scenario.
 \item Adjust the function generator to an amplitude of \SI{200}{V_{pp}} as measured on channel 1 of the oscilloscope.
 \item Measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
