--- a/school/elec_313/lab7/tex/report.tex
+++ b/school/elec_313/lab7/tex/report.tex
@@ -48,13 +48,13 @@ The following procedures were identified to observe the basic operation of MOSFE
 
 \begin{enumerate}
 \item Build the circuit shown in Figure~\ref{schem:common-source}.  Use the closest resistor values available for R1 and Rs.
-\item Measure and record the drain current and dc voltages at all terminals of the MOSFET.
-\item Set the function generator for a \SI{200}{V_{pp}}, \SI{20}{kHz} sine wave with 0V DC offset.  Connect it to $V_{in}$ .
-\item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground. This will be considered a no-load scenario.
-\item Connect channel 1 of the oscilloscope to $V_{in}$ and channel 2 to $V_{out}$ . Set the scope to trigger off of channel 1 . This setting is accessed using the EDGE button on the oscilloscope.
+\item Measure and record the drain current and DC voltages at all terminals of the MOSFET.
+\item Set the function generator for a \SI{200}{V_{pp}}, \SI{20}{kHz} sine wave with \SI{0}{V} DC offset.  Connect it to $V_{in}$.
+\item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground.  This will be considered a no-load scenario.
+\item Connect channel 1 of the oscilloscope to $V_{in}$ and channel 2 to $V_{out}$.  Set the scope to trigger off of channel 1. This setting is accessed using the EDGE button on the oscilloscope.
 \item Adjust the function generator to an amplitude of \SI{200}{V_{pp}} as measured on channel 1 of the oscilloscope.
 \item Measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
-\item Repeat step 6 for input voltages (as measured on channel 1 of the oscilloscope) of 300, 400, 500, 600, 700, 800, 900, and \SI{1000}{mV_{pp}} .
+\item Repeat step 6 for input voltages of 300, 400, 500, 600, 700, 800, 900, and \SI{1000}{mV_{pp}}.
 \item Replace the \SI{100}{\kilo\ohm} from $V_{out}$ to ground with a \SI{1}{\kilo\ohm} load resistor.
 \item Reset the function generator to an amplitude of \SI{200}{V_{pp}} as measured on channel 1 of the oscilloscope.
 \item Measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
@@ -64,26 +64,29 @@ The following procedures were identified to observe the basic operation of MOSFE
 
 \begin{enumerate}
 \item Construct the circuit shown in Figure~\ref{schem:source-follower} by removing the \SI{1}{\kilo\ohm} drain resistor and moving the output capacitor to the source of the MOSFET.
-\item Measure and record the drain current and dc voltages at all terminals of the MOSFET.
+\item Measure and record the drain current and DC voltages at all terminals of the MOSFET.
 \item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground. This will be considered a no-load scenario.
 \item Adjust the function generator to an amplitude of \SI{200}{V_{pp}} as measured on channel 1 of the oscilloscope.
 \item Measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
-\item Repeat step 4 for input voltages (as measured on channel 1 of the oscilloscope) of 300, 400, 500, 600, 700, 800, 900, and \SI{1000}{mV_{pp}} .
+\item Repeat step 4 for input voltages of 300, 400, 500, 600, 700, 800, 900, and \SI{1000}{mV_{pp}}.
 \item Reset the function generator to an amplitude of \SI{200}{V_{pp}} as measured on channel 1 of the oscilloscope.
 \item Replace the \SI{100}{\kilo\ohm} resistor from $V_{out}$ to ground with a \SI{1}{\kilo\ohm} resistor and measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
-\item Now replace the \SI{1}{\kilo\ohm} load resistor with a 100ohm load resistor and measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
+\item Now replace the \SI{1}{\kilo\ohm} load resistor with a \SI{100}{ohm} load resistor and measure the peak-to-peak output voltage on channel 2 of the oscilloscope.
 \end{enumerate}
 
 \section{Results}
 
 \subsection{Common-Source Amplifier}
 
+
 \begin{table}[hbtp]
   \centering
-  \begin{tabular}{cccc}
-    $V_G$ & $V_D$ & $V_S$ & $I_D$ \\
+  \begin{tabular}{ccccc}
+    & $V_{G}$ (\si{V}) & $V_{D}$ (\si{V}) & $V_{S}$ (\si{V}) & $I_D$ (\si{mA}) \\
     \hline
-    \SI{4.391}{V} & \SI{13.498}{V} & \SI{2.11}{V} & \SI{4.52}{mA} \\
+    \textbf{Measured} & 4.391 & 13.498 & 2.11 & 4.52 \\
+    \textbf{Theoretical} & 4.466 & 14.000 & 2.4214 & 4.00 \\
+    \textbf{\% Difference} & 1.712\% & 3.719\% & 14.800\% & 11.500\% \\
   \end{tabular}
   \caption{\label{tab:tran_common} Transistor characteristics}
 \end{table}
@@ -136,21 +139,8 @@ The following procedures were identified to observe the basic operation of MOSFE
   \caption{\label{tab:source-follower} Source-follower amplifier}
 \end{table}
 
-\begin{table}[hbtp]
-  \centering
-  \begin{tabular}{ccccc}
-    & $V_{G}$ (\si{V}) & $V_{D}$ (\si{V}) & $V_{S}$ (\si{V}) & $I_D$ (\si{mA}) \\
-    \hline
-    \textbf{Measured} & 4.391 & 13.498 & 2.11 & 4.52 \\
-    \textbf{Theoretical} & 4.466 & 14.000 & 2.4214 & 4.00 \\
-    \textbf{\% Difference} & 1.712\% & 3.719\% & 14.800\% & 11.500\% \\
-  \end{tabular}
-  \caption{\label{tab:percent_diff} \% Difference}
-\end{table}
-
 \section{Conclusion}
 \label{sec:conclusion}
-
 
 \section{Equations}
 \label{sec:equations}
